# Shaga-Monorepo

./: .gitmodules  README.md
executables/Moonlight/: output-metadata.json
shaga-solana-program/: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md
shaga-solana-program/app/shaga_joe/: .env.example  .solitarc.js  package.json  run_solita.js  tsconfig.json
shaga-solana-program/app/shaga_joe/idl/: shaga.json
shaga-solana-program/app/shaga_joe/src/: constants.ts  main.ts  pda.ts  utils.ts
shaga-solana-program/app/shaga_joe/src/custom/: instructions.ts
shaga-solana-program/app/test_keypairs/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json
shaga-solana-program/programs/shagaJoe/: Cargo.toml
shaga-solana-program/programs/shagaJoe/src/: checks.rs  errors.rs  lib.rs  seeds.rs
shaga-solana-program/programs/shagaJoe/src/instructions/: create_affair.rs  create_lender.rs  end_rental.rs  initialize.rs  mod.rs  start_rental.rs  terminate_affair.rs  terminate_vacant_affair.rs
shaga-solana-program/programs/shagaJoe/src/states/: affair.rs  affair_list.rs  escrow.rs  lender.rs  mod.rs  rental.rs
